# ArcRenderer

./: .gitignore  CMakeLists.txt
arc/: BasicGeometry.hpp  FileSlurp.hpp  GlBasicVertexBuffer.hpp  GlContext.hpp  GlError.hpp  GlIndexBuffer.hpp  GlShader.hpp
src/: BasicGeometry.cpp  FileSlurp.cpp  GlContext.cpp  GlError.cpp  GlIndexBuffer.cpp  GlShader.cpp
tests/phong-lighting/: CMakeLists.txt  normal.frag  normal.vert  phong.frag  simple_geometry.h  solid.frag  solid.vert  test.cpp
tests/uniforms/: CMakeLists.txt  solid.frag  solid.vert  test.cpp  ubo_solid.vert
tests/window/: CMakeLists.txt  test.cpp
